methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (c <- 1 to 6) {
         ^MethodsReturning:14: error: type mismatch;
 found   : Unit
 required: Boolean
  for (l <- 1 to 6) {
         ^